# AI-Stock-Analysis-Assistant

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.tsx
